--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,7 @@ tbody td button:nth-child(3){
  .alert-error{
     background-color: var(--color-error);
  }
+
+ #edit-button{
+    display: none;
+ }
